# kodi-qrcode-client

./: CMakeLists.txt  Gpio.cpp  Gpio.hpp  README.md  kodi-gen-qrcode.py  kodi.json  main.cpp
